# hikari-agent

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  MODELS.md  README.md  pyproject.toml  sprints.md
.codex/: config.toml
.github/workflows/: ci.yml  nightly-evals.yml
agents/: _turn_state.py  affect.py  annual_review.py  auth_precheck.py  background_listener.py  belief_frame.py  bridge_ux.py  cadence.py  callback_surface.py  capability_offers.py  cockpit.py  command_menu.py  compound_turn.py  config.py  cross_session.py  daily_brief.py  daily_checkin.py  decision_log.py  dialectic.py  diary.py  drift_canary.py  drift_judge.py  ecp.py  evening_diary.py  external_wrap_hook.py  future_letter.py  google_health.py  handoff.py  health.py  hooks.py  injection_guard.py  interview_brief.py  job_handoff.py  jobhunt_context.py  lexicon_extractor.py  log_scrub.py  mail_decisions.py  mail_handoff.py  mcp_manager.py  messaging.py  (+28 more)
agents/engagement/: __init__.py  composer.py  guard.py  selector.py  sender.py  triggers.py
agents/subagents/: __init__.py  code_dispatch.py  drive_gmail.py  github.py  notion.py  recall.py  research.py  research_worker.py  wiki.py
assets/: APPEARANCE.md  PERSONA.md
auth/: __init__.py  github.py  google.py  notion.py  providers.py  scope_match.py  store.py
codex/: 2026-05-23-modernity-architecture-review.md  agent_system_architecture_review.md  architecture-review-2026-05-23.md  code_structure_review_findings.md  conversation-quality-evals-review-2026-05-23.md  dead-code-dead-tests-deep-dive-2026-05-23.md  dead-code-dead-tests-review-2026-05-23.md  deep-architecture-review-2026-05-23.md  findings-persona-2026-05-27.md  hikari-agent-ops-review-backlog-2026-05-28.md  hikari-agent-ops-review-lane-findings-2026-05-28.md  hikari-agent-review-FRESH-2026-05-29.md  hikari-agent-review-backlog-2026-05-28.md  hikari-agent-review-synthesis-2026-05-28.md  hikari-upgrade-synthesis-2026-05-27.md  index.md  non-google-integrations-deep-review-2026-05-23.md  ops-production-runbook-2026-05-23.md  other-tools-review-2026-05-23.md  persona-config-review-findings.md  prompt-1-useful-active-bot-review-2026-05-25.md  prompt-2-compound-turn-parallel-tools-review-2026-05-25.md  prompt-4-tool-usefulness-audit-2026-05-25.md  prompt-5-hermes-openclaw-competitive-review-2026-05-25.md  prompt-6-telegram-voice-ux-review-2026-05-25.md  prompt-7-product-roadmap-synthesis-2026-05-25.md  prompt_persona_deep_dive.md  research-active-encouragement-ux-2026-05-25.md  research-hermes-openclaw-competitive-2026-05-25.md  research-synthesis-useful-active-bot-roadmap-2026-05-25.md  research-telegram-voice-ux-2026-05-25.md  research-tool-usefulness-audit-2026-05-25.md  research-usefulness-non-generic-bot-2026-05-25.md  second-pass-cleanup-ci-packaging-2026-05-24.md  second-pass-conversation-evals-2026-05-24.md  second-pass-google-workspace-tool-surface-2026-05-24.md  second-pass-media-pipeline-2026-05-24.md  second-pass-memory-graph-2026-05-24.md  second-pass-ops-production-2026-05-24.md  second-pass-product-capabilities-2026-05-24.md  (+16 more)
codex/archive/: hikari-agent-ops-review-synthesis-2026-05-28.md  hikari-agent-review-lane-findings-2026-05-28.md
config/: engagement.yaml  hikari_interests_pool.yaml  hikari_playlist.yaml  scopes.yaml  tools.yaml
docs/: credential_rotation.md  duckdb_mcp.md
etc/newsyslog/: hikari.conf
evals/conversation/: __init__.py  banned_phrases.py  judge.py  rubrics.yaml  runner.py  runner_layer_b.py  runner_layer_c.py  scorer.py
evals/flip/: bank.yaml  harness.py
mcp_external/: __init__.py  _base_url.py  _rate_limit.py  launch.py  oauth.py  server.py
scripts/: age_keygen.sh  auth.py  backfill_embeddings.py  backfill_fact_extraction.py  backfill_facts_to_graph.py  backfill_graph_outbox.py  backup.sh  dead_man.py  grab_stickers.py  ingest_to_memory.py  install_backup.sh  install_cloudflared.md  install_cloudflared_launchd.sh  install_deadman.sh  install_external_mcp_launchd.sh  install_launchd.sh  install_lulu_rules.md  launchd_cloudflared.plist  launchd_deadman.plist  launchd_mcp_external.plist  migrate_from_current.py  migrate_secrets_to_keychain.py  reconcile_graph.py  regen_mcp_json.py  regen_subagent_policy.py  reset_proactive_log.py  restore.sh  run_evals.py  run_evals_live.py  run_flip_eval.py  setup_google_oauth.py  setup_ytmusic.md  upload_stickers.py  validate_mcp_servers.py  validate_tool_registry.py
storage/: db.py  graph.py  migrations.py  retrieval.py
tests/: conftest.py  test_accountability_create.py  test_accountability_followup_fires.py  test_accountability_resolution.py  test_accountability_schema.py  test_allowlist_completeness.py  test_anniversary_callback.py  test_annual_review.py  test_apple_events_gatekeeper.py  test_apple_notes.py  test_apple_shortcuts_mcp.py  test_approval_matrix.py  test_approval_preview_truthful.py  test_approvals_resolver_accepts_id.py  test_arxiv.py  test_async_subprocess_wrappers.py  test_audit_redaction_widened.py  test_auth_revoke_cli.py  test_auth_scopes.py  test_aux_llm_retry.py  test_backup_atomicity.py  test_backup_encryption.py  test_belief_frame.py  test_belief_frame_does_not_persist.py  test_belief_journal.py  test_bounded_rewrite.py  test_bridge_location_and_offer.py  test_bridge_ux.py  test_buried_lore_gate.py  test_busy_timeout.py  test_cadence_governor.py  test_calc.py  test_callback_framing.py  test_callback_surface.py  test_callbacks_owner_gated.py  test_canary_decoy.py  test_capabilities_overview.py  test_capability_offers.py  test_catalog.py  test_cb_reminder_snooze.py  (+303 more)
tools/: README.md  _annotations.py  _lazy.py  _registry.py  _response.py  _telemetry.py  _tools_yaml.py  _utility_index.py  apple_notes.py  approvals.py  arxiv_search.py  attachments.py  budget.py  calc.py  catalog.py  codex.py  currency.py  dispatch.py  embeddings.py  gatekeeper.py  gatekeeper_can_use_tool.py  location.py  mcp_introspect.py  memory.py  notion.py  photos.py  places.py  reminders.py  research.py  scratch.py  translate.py  voice.py  voice_outbound.py  weather.py  wiki.py  ytmusic.py
tools/calc/: _shared.py  (+3 more)
(+234 files in other folders)
