[project]
name = "hikari-agent"
version = "0.1.0"
description = "Hikari — agentic Telegram bot on Claude Agent SDK (greenfield rewrite of hikari-tsukino-bot)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "claude-agent-sdk>=0.2.82",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "obsidiantools>=0.10",
    "python-frontmatter>=1.1",
    "ruamel.yaml>=0.18",
    "watchdog>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pykakasi>=2.3.0",
    "asteval>=1.0.8",
    "arxiv>=4.0.0",
    "osm-opening-hours-humanized>=1.0.0b7",
    "ytmusicapi>=1.12.0",
    "itsdangerous>=2.2.0",
    "pillow>=10.0",
    "keyring>=24",
    "graphiti-core[anthropic,kuzu]==0.29.1",
    "kuzu==0.11.3",
    "bm25s[core]>=0.3.9,<0.4",
]

[dependency-groups]
dev = [
    "google-auth-oauthlib>=1.4.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "storage", "tools"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that hit live models — skipped by default, run via pytest -m slow",
    "uses_real_graph: tests that manage their own graph patches; opt out of conftest _block_graphiti",
]

[project.scripts]
hikari-agent = "agents.telegram_bridge:main"
