[project]
name = "hikari-agent"
version = "0.1.0"
description = "Hikari — agentic Telegram bot on Claude Agent SDK (greenfield rewrite of hikari-tsukino-bot)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "claude-agent-sdk>=0.2.82",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "obsidiantools>=0.10",
    "python-frontmatter>=1.1",
    "ruamel.yaml>=0.18",
    "pykakasi>=2.3.0",
    "asteval>=1.0.8",
    "arxiv>=4.0.0",
    "osm-opening-hours-humanized>=1.0.0b7",
    "ytmusicapi>=1.12.0",
    "itsdangerous>=2.2.0",
    "pillow>=10.0",
    "keyring>=24",
    "graphiti-core[anthropic,kuzu]==0.29.1",
    "kuzu==0.11.3",
    "bm25s[core]>=0.3.9,<0.4",
    "faster-whisper>=1.0",  # local STT alternative to OpenAI Whisper API
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*", "storage*", "auth*", "evals*", "mcp_external*"]
exclude = ["data*", "secrets*", "codex*", "plans*", "scripts*", "tests*", "assets*", "config*", "etc*"]

[dependency-groups]
dev = [
    "google-auth-oauthlib>=1.4.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "codex/",                # research docs (markdown)
    "data/",                 # runtime data (DB, photos, cache)
    "secrets/",              # never lint secrets
    ".claude/worktrees/",    # git worktree scratch dirs
    "mcp_external/",         # vendored MCP servers
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Data ingest script: long string literals are prose/URLs in data tuples — wrapping breaks readability
"scripts/ingest_to_memory.py" = ["E501"]
# Tests routinely embed long fixture strings, expected-output literals, and
# parametrize args — wrapping them harms readability vs. the cost of a
# one-line overflow.
"tests/**/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that hit live models — skipped by default, run via pytest -m slow",
    "uses_real_graph: tests that manage their own graph patches; opt out of conftest _block_graphiti",
]
